# I2C-slave-multi-address-RP2040

./: .gitignore  LICENSE  README.md
arduino/i2c_multi/: i2c_multi.c  i2c_multi.h  i2c_multi.ino  i2c_multi.pio.h  i2c_multi_pio.c  i2c_multi_pio.h
sdk/: CMakeLists.txt  i2c_multi.c  i2c_multi.h  i2c_multi.pio  i2c_multi_pio.c  i2c_multi_pio.h  main.c
